--- a/index.html
+++ b/index.html
@@ -149,7 +149,19 @@ body {
     <span class="vd-headings">
         Work experience    </span>
 
-    
+        <div class="vd-section-holder">
+            <div class="vd-section-date-holder">
+                <span class="datum">
+                    Jan 2020                &nbsp;            </span>
+            </div>
+            <div class="vd-section-content-holder">
+                <span class="namn">Exedra Iot</span>
+                            <span class="titel">- Senior Software Engineer</span>
+                            <span class="date-mobile">Jan 2020                            </span>
+                            <span class="text"><div><strong>NSurvey Project</strong>United Nations HIES survey system</div><div>Asp.net webforms, Webapi Core, Sql Server</div><div><br></div></span>
+                        </div>
+        </div>
+
         
     <div class="vd-section-holder">
         <div class="vd-section-date-holder">
