--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@ body {
         <div class="vd-section-holder">
             <div class="vd-section-date-holder">
                 <span class="datum">
-                    Jan 2020                &nbsp;            </span>
+                    Jan 2020  - Present              &nbsp;            </span>
             </div>
             <div class="vd-section-content-holder">
                 <span class="namn">Exedra Iot</span>
                             <span class="titel">- Senior Software Engineer</span>
                             <span class="date-mobile">Jan 2020                            </span>
-                            <span class="text"><div><strong>NSurvey Project</strong>United Nations HIES survey system</div><div>Asp.net webforms, Webapi Core, Sql Server</div><div><br></div></span>
+                            <span class="text"><div><strong>NSurvey Project. </strong> United Nations HIES survey system</div><div>Asp.net webforms, Webapi Core, Sql Server</div><div><br></div></span>
                         </div>
         </div>
 
