--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ body {
 			<div class="vd-top-two">
 				<span class="vd-name">Muhammad Rehan Baig
 </span>
-				<span class="vd-title">Senior Software Engineer</span>
+				<span class="vd-title">Senior FullStack Software Engineer</span>
 			</div>
 			<div class="vd-top-three">
 								<span class="vd-top-adress">Farhan Classic Flat # A509 Gulistan e Johar Karachi					, 72590 Karachi				</span>
@@ -156,7 +156,7 @@ body {
             </div>
             <div class="vd-section-content-holder">
                 <span class="namn">Exedra Iot</span>
-                            <span class="titel">- Senior Software Engineer</span>
+                            <span class="titel">- Senior FullStack Software Engineer</span>
                             <span class="date-mobile">Jan 2020                            </span>
                             <span class="text"><div><strong>NSurvey Project. </strong> United Nations HIES survey system</div><div>Asp.net webforms, Webapi Core, Sql Server</div><div><br></div></span>
                         </div>
