--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ body {
 	font-size: px !important;
 }
 .vd-name {
+    color:hsl(340, 86%, 41%) !important;
 	font-size: px !important;
 	font-family: "Source Sans Pro", "open sans", "Century Gothic", CenturyGothic, "Microsoft YaHei New", "Microsoft Yahei", "微软雅黑", 宋体, SimSun, 华文细黑, STXihei, 黑体, SimHei, sans-serif;;
 }
