--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body {
 					
 				
 			<div class="vd-top-two">
-				<span class="vd-name">Muhammad Rehan Baig
+				<span class="vd-name"><strong>Muhammad Rehan Baig</strong>
 </span>
 				<span class="vd-title">Senior FullStack Software Engineer</span>
 			</div>
