--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ body {
         <div class="resume-job-period">Jan 2019 – Sep 2021</div>
         <div class="resume-job-info">
           <div>
-            <span class="resume-job-title">Full Stack Senior Software Engineer</span>,
+            <span class="resume-job-title">Full Stack Software Engineer</span>,
             <span class="resume-job-org">Exedra (IoT Solutions)</span>
             <span class="resume-job-location">| Kuwait (Remote)</span>
           </div>
@@ -393,7 +393,7 @@ body {
     <div class="resume-edu-row">
       <div class="resume-edu-period">2014 – 2018</div>
       <div class="resume-edu-info">
-        <span class="resume-edu-title">Bachelor of Engineering (Software)</span>,
+        <span class="resume-edu-title">Bachelor of Engineering (Software Engineering)</span>,
         <span class="resume-edu-org">Mehran University of Engineering and Technology</span>
         <div style="color:#555; font-size:0.97em;">Solid foundation in software development principles and practices.</div>
       </div>
@@ -403,7 +403,7 @@ body {
   <section class="resume-section" aria-labelledby="skills">
     <div class="resume-section-title" id="skills">Skills</div>
     <div class="resume-skill-list">
-      <span class="resume-skill">ASP.NET / .NET Core</span>
+      <span class="resume-skill">ASP.NET / .NET Core / .Net MVC / WebApis</span>
       <span class="resume-skill">SQL Server / Postgres</span>
       <span class="resume-skill">C#</span>
       <span class="resume-skill">JavaScript</span>
@@ -414,6 +414,8 @@ body {
       <span class="resume-skill">Web APIs / REST</span>
       <span class="resume-skill">Software Architecture</span>
       <span class="resume-skill">TDD / Unit Testing</span>
+      <span class="resume-skill">WebApi</span>
+      <span class="resume-skill">Web Services</span>
       <span class="resume-skill">SignalR</span>
       <span class="resume-skill">Git / Bitbucket / Jira / GitLab</span>
       <span class="resume-skill">Socket.IO</span>
